# Distributed under the MIT License.
# See LICENSE.txt for details.

add_subdirectory(Convergence)
add_subdirectory(DiscontinuousGalerkin)
add_subdirectory(Integration)
add_subdirectory(Interpolation)
add_subdirectory(LinearAlgebra)
add_subdirectory(LinearOperators)
add_subdirectory(LinearSolver)
add_subdirectory(OdeIntegration)
add_subdirectory(RootFinding)
add_subdirectory(SpatialDiscretization)
add_subdirectory(Spectral)
