# Distributed under the MIT License.
# See LICENSE.txt for details.

[metadata]
name = spectre
version = @SPECTRE_VERSION@
description = Python bindings for SpECTRE
author = SXS collaboration
url = @SPECTRE_HOMEPAGE@
license = MIT

[options]
packages = find:
install_requires =
    h5py >= 3.0.0
    numpy
    scipy

[options.package_data]
# Install Python bindings libs alongside the Python code
* = *.so

[options.entry_points]
console_scripts =
    spectre = spectre.__main__:main
